--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ a{
     padding: 1em;
     border-left: 2px solid #69c;
     line-height:1.3;
+    font-size: 0.9em;
+    font-style: italic;
 }
 
 .ref-node-1{ background: #eee; }
@@ -47,7 +49,8 @@ a{
 
 .reply{
     color:#366b78;
-    font-size: 1.1em;
+    font-size: 1.0em;
+    padding: 1em;
 }
 
 
