--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     max-width: 50em;
     font-family: "Helvetica", "Arial", sans-serif;
     line-height:1.5;
-    padding:4em 1em;
+    padding:1em 1em 4em 1em;
     color:#566b78;
 }
 
